[tool.pyright]
exclude = ["**/__pycache__"]
pythonVersion = "3.9"
pythonPlatform = "Linux"

[tool.setuptools]
packages = ["gexp"]

[project]
name = "gexp_aneeshdurg"
version = "0.0.1"
authors = [
  { name="Aneesh Durg", email="aneeshdurg17@gmail.com" },
]
description = "..."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]
